--- a/WebApplication1/Views/Home/Login.cshtml
+++ b/WebApplication1/Views/Home/Login.cshtml
@@ -3,12 +3,20 @@
     ViewBag.Title = "Connexion";
 }
 <div class="row">
-    @using (Html.BeginForm("Login", "Home", FormMethod.Post))
-    {
-        @Html.TextBoxFor(m => m.Email)
-        @Html.TextBoxFor(m => m.Password)
+    <div class="col-4">
+        @using (Html.BeginForm("Login", "Home", FormMethod.Post))
+        {
+            <div class="form-group">
+                @Html.LabelFor(m => m.Email)
+                @Html.TextBoxFor(m => m.Email)
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.Password)
+                @Html.TextBoxFor(m => m.Password)
+            </div>
+            <input class="btn btn-primary" type="submit" value="Submit" />
+        }
+    </div>
+</div>
 
-        <input type="submit" value="Submit" />
-    }
-    
-</div>;
+        
