--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
     
     <div class="row">
-        <div style="flex: 0 0 33.333333%;">
+        <div>
             @Html.Action("GetClients", "Home")
         </div>
     </div>
