--- a/WebApplication1/Content/Site.css
+++ b/WebApplication1/Content/Site.css
@@ -2,10 +2,7 @@
     padding-top: 50px;
     padding-bottom: 20px;
 }
-.addClientForm{
-    width:180px;
-    float:right;
-}
+
 /* Set padding to keep content from hitting the edges */
 .body-content {
     text-align: center;
@@ -54,6 +51,9 @@ textarea {
     text-align: center;
     padding: 10px 0px
 }
-.supprimer {
-
+h3 {
+    color: darkblue
+}
+.form-container {
+    padding: 30px 
 }
