--- a/WebApplication1/Views/Home/Login.cshtml
+++ b/WebApplication1/Views/Home/Login.cshtml
@@ -5,6 +5,7 @@
 <h3 style="text-align:center">Connexion</h3>
 <div class="row">
     <div class="col-4 loginConnexion" style="margin:0 auto; max-width:180px;">
+        <p style="color: red">@ViewBag.Err</p>
         @using (Html.BeginForm("Login", "Home", FormMethod.Post))
         {
             <div class="form-group">
@@ -13,7 +14,7 @@
             </div>
             <div class="form-group">
                 @Html.LabelFor(m => m.Password)
-                @Html.TextBoxFor(m => m.Password)
+                @Html.PasswordFor(m => m.Password)
             </div>
             <input class="btn btn-primary" type="submit" value="Submit" />
         }
