--- a/WebApplication1/Views/Home/UpdateClient.cshtml
+++ b/WebApplication1/Views/Home/UpdateClient.cshtml
@@ -3,23 +3,23 @@
         @using (Html.BeginForm("UpdateClient", "Home", FormMethod.Post))
         {
             <h3>Modifier un client</h3>
-            <div class="form-group" read>
-                @Html.LabelFor(m => m.Id)
-                @Html.TextBoxFor(m => m.Id , new { @readonly = "readonly" })
+            <div class="form-group row" read>
+                <div class="col-4">@Html.LabelFor(m => m.Id)</div>
+                <div class="col-4">@Html.TextBoxFor(m => m.Id, new { @readonly = "readonly" })</div>
             </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.Name)
-                @Html.TextBoxFor(m => m.Name)
+            <div class="form-group row">
+                <div class="col-4"> @Html.LabelFor(m => m.Name)</div>
+                <div class="col-4">@Html.TextBoxFor(m => m.Name)</div>
             </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.FirstName)
-                @Html.TextBoxFor(m => m.FirstName)
+            <div class="form-group row">
+                <div class="col-4">@Html.LabelFor(m => m.FirstName)</div>
+                <div class="col-4">@Html.TextBoxFor(m => m.FirstName)</div> 
             </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.Address)
-                @Html.TextBoxFor(m => m.Address)
+            <div class="form-group row">
+                <div class="col-4">@Html.LabelFor(m => m.Address)</div>
+                <div class="col-4">@Html.TextBoxFor(m => m.Address)</div> 
             </div>
-            <input class="btn btn-primary" type="submit" value="Add" />
+            <input class="btn btn-primary" type="submit" value="Modifier le client" />
         }
     </div>
 
